copy improvements
